--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food-Blog</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
+    <title>Food Blog</title>
 </head>
 <body>
+    <section class="container">
+        <div class="half-with">
+            <h1><span class="orang-color">Skip</span> The Diet Just Eat Healthy With Food Network</h1>
+            <h3> Imagine you don't need a diet because we provide healthy and  delicious food  for you!</h3>
+            <a class="btn"  target="_blank" href="https://github.com/Farhadcode">Order Food</a>
+        </div>
+        <div class="half-with">
+            <img src="images/female/Group 8425.png" alt="">
+        </div>
+    </section>
+
+    <section class="container">
+        <div class="half-with">
+            <img src="images/female/Person Image.png" alt="">
+        </div>
+        <div class="half-with">
+            <h2>About Me</h2>
+            <h3> Imagine you don't need a diet because we provide healthy and  delicious food  for you!</h3>
+            <a class="btn"  target="_blank" href="https://github.com/Farhadcode">Order Food</a>
+        </div>
+    </section>
     
 </body>
 </html>
