recipi cooking done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="container">
         <div class="half-with">
             <h1><span class="orang-color">Skip</span> The Diet Just Eat Healthy With Food Network</h1>
-            <h3> Imagine you don't need a diet because we provide healthy and  delicious food  for you!</h3>
+            <p> Imagine you don't need a diet because we provide healthy and  delicious food  for you!</p>
             <a class="btn"  target="_blank" href="https://github.com/Farhadcode">Order Food</a>
         </div>
         <div class="half-with">
@@ -22,14 +22,38 @@
         </div>
     </section>
 
-    <section class="container">
+    <section class="container about-bg ">
         <div class="half-with">
             <img src="images/female/Person Image.png" alt="">
         </div>
         <div class="half-with">
             <h2>About Me</h2>
-            <h3> Imagine you don't need a diet because we provide healthy and  delicious food  for you!</h3>
-            <a class="btn"  target="_blank" href="https://github.com/Farhadcode">Order Food</a>
+            <p> Imagine you don't need a diet because we provide healthy and  delicious food  for you!</p>
+            <a class="btn"  target="_blank" href="https://github.com/Farhadcode">Contact me</a>
+        </div>
+    </section>
+    <section >
+        <div class="recipi-top">
+            <h2> My Recipies</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Perspiciatis, optio cupiditate vel consequuntur provident <br>magni esse vitae odit delectus porro.</p>
+        </div>
+        <div class="recipi-cards container">
+            <div class="card">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h3>Frots Batar Mixsagon</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, porro!</p>
+            </div>
+            <div class="card">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h3>Hot Dog  Yami FOOD</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae, saepe.</p>
+            </div>
+            <div class="card">
+                <img src="images/food/Project Cover.png" alt="">
+                <h3>Sup HOt Mix</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat, recusandae!</p>
+            </div>
+
         </div>
     </section>
     
