--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h2> My Recipies</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Perspiciatis, optio cupiditate vel consequuntur provident <br>magni esse vitae odit delectus porro.</p>
         </div>
-        <div class="recipi-cards container">
+        <div class=" container">
             <div class="card">
                 <img src="images/food/Project Cover1.jpg" alt="">
                 <h3>Frots Batar Mixsagon</h3>
@@ -56,6 +56,20 @@
 
         </div>
     </section>
+     <section class="container box">
+         <div class="social-media">
+             <h1> 700K</h1>
+             <p> Youtube Subscribers</p>
+         </div>
+         <div class="social-media">
+             <h1>2.4m</h1>
+             <p>Instagram Followers</p>
+         </div>
+         <div class="social-media">
+             <h1>100k</h1>
+             <p> Dribble Shot Likes</p>
+         </div>
+     </section>
     
 </body>
 </html>
