--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
              <p> Dribble Shot Likes</p>
          </div>
      </section>
+     <footer>
+         <h2> <span class="orang-color">FOOD</span> NETWORK</h2>
+         <p> Eat healthy to live  healthy.Live healthy to live happy</p>
+         
+     </footer>
     
 </body>
 </html>
