--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <title>Food Blog</title>
 </head>
 <body>
+    
+        <ul>
+            <li><a href="#home"> Home</a></li>
+            <li><a href="#about"> About</a></li>
+            <li><a href="#foods">Foods</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    
     <section class="container">
         <div class="half-with">
             <h1><span class="orang-color">Skip</span> The Diet Just Eat Healthy With Food Network</h1>
@@ -69,6 +77,20 @@
              <h1>100k</h1>
              <p> Dribble Shot Likes</p>
          </div>
+     </section>
+
+     <section class="box">
+         <h2>Contact Us</h2>
+         <form action="#cotact">
+            <label for="">First Name</label>
+            <input type="text" placeholder="your name ...">
+            <br>
+            <label for="">Last Name</label>
+            <input type="text" placeholder=" your last name ...">
+            <br> 
+            <label for=""> Email</label>
+            <input type="email" name="" id="" placeholder=" your email ...">
+         </form>
      </section>
      <footer>
          <h2> <span class="orang-color">FOOD</span> NETWORK</h2>
