--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
          </div>
      </section>
 
-     <section class="box">
+     <section  class="input-box">
          <h2>Contact Us</h2>
+         <div class="input-file">
          <form action="#cotact">
             <label for="">First Name</label>
             <input type="text" placeholder="your name ...">
@@ -89,8 +90,11 @@
             <input type="text" placeholder=" your last name ...">
             <br> 
             <label for=""> Email</label>
-            <input type="email" name="" id="" placeholder=" your email ...">
+            <input type="text" name="" id="" placeholder=" your email ...">
+            <br>
+            <input type="submit" value="Submit">
          </form>
+        </div>
      </section>
      <footer>
          <h2> <span class="orang-color">FOOD</span> NETWORK</h2>
