--- a/index.html
+++ b/index.html
@@ -36,30 +36,31 @@
         </div>
         <div class="half-with">
             <h2>About Me</h2>
-            <p> Imagine you don't need a diet because we provide healthy and  delicious food  for you!</p>
+            <p>I am a person who is positive about every aspect of life. <br>There are many things I like to do, to see, and to experience.<br> I like to read, I like to write; I like to think, I like to dream;<br> I like to talk, I like to listen. I like to see the sunrise in the morning,</p>
             <a class="btn"  target="_blank" href="https://github.com/Farhadcode">Contact me</a>
         </div>
     </section>
     <section >
         <div class="recipi-top">
             <h2> My Recipies</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Perspiciatis, optio cupiditate vel consequuntur provident <br>magni esse vitae odit delectus porro.</p>
+            <p>You have to live spherically in many directions.<br>I am very foodie.
+             I love to eat and cook.The food<br>  gives us energy. Without food, there is no life.</p>
         </div>
         <div class=" container">
             <div class="card">
                 <img src="images/food/Project Cover1.jpg" alt="">
                 <h3>Frots Batar Mixsagon</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, porro!</p>
+                <p>You’ve gotta plan ahead and use thoroughly-chilled cooked rice. A fresh batch of warm</p>
             </div>
             <div class="card">
                 <img src="images/food/Project Cover.jpg" alt="">
                 <h3>Hot Dog  Yami FOOD</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae, saepe.</p>
+                <p>You’ve gotta plan ahead and use thoroughly-chilled cooked rice. A fresh batch of warm</p>
             </div>
             <div class="card">
                 <img src="images/food/Project Cover.png" alt="">
                 <h3>Sup HOt Mix</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat, recusandae!</p>
+                <p>You’ve gotta plan ahead and use thoroughly-chilled cooked rice. A fresh batch of warm</p>
             </div>
 
         </div>
